[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Textures/UI/loading_dial.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/UI/knot_sep2.png" type="Texture" id=5]
[ext_resource path="res://mods/CertifiedPyro.TunaGuitar/Scenes/SaveAsChordsMenu/save_as_chords_menu.gd" type="Script" id=6]

[node name="SaveAsChordsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -1137, -549 )

[node name="ExitButton" type="Button" parent="Panel"]
anchor_left = 0.979167
anchor_top = -0.0262346
anchor_right = 1.01417
anchor_bottom = 0.0257654
margin_right = 1.68005
margin_bottom = 8.304
text = "X"
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="Panel"]
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 0.075
margin_left = 16.0
text = "Chord Presets"

[node name="TitleSep" type="TextureRect" parent="Panel"]
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 0.075
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Panel" type="Panel" parent="Panel"]
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 0.85
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/ScrollContainer"]
margin_right = 1128.0
margin_bottom = 479.52
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="TextureRect" type="CenterContainer" parent="Panel/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Control" type="Control" parent="Panel/Panel/TextureRect"]
margin_left = 580.0
margin_top = 255.0
margin_right = 580.0
margin_bottom = 255.0
mouse_filter = 2

[node name="dial" type="Sprite" parent="Panel/Panel/TextureRect/Control"]
visible = false
texture = ExtResource( 4 )

[node name="SaveRow" type="HBoxContainer" parent="Panel"]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="PresetNameLabel" type="Label" parent="Panel/SaveRow"]
margin_top = 18.0
margin_right = 142.0
margin_bottom = 52.0
text = "Preset Name:"
valign = 1

[node name="DummyLineEdit" type="LineEdit" parent="Panel/SaveRow"]
margin_left = 158.0
margin_right = 994.0
margin_bottom = 71.0
size_flags_horizontal = 3
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[node name="NewPresetName" type="LineEdit" parent="Panel/SaveRow/DummyLineEdit"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
placeholder_text = "Name"

[node name="SaveButton" type="Button" parent="Panel/SaveRow"]
margin_left = 1010.0
margin_right = 1160.0
margin_bottom = 71.0
rect_min_size = Vector2( 150, 0 )
text = "Save"

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/SaveRow/SaveButton" to="." method="_on_save_button_pressed"]
